Fix spacing for subtitle and subtitleLinks
Subtitle and and subtitle links are now consistently 48px from right. Updated classes to handle new header architecture
(these classes match their equivalents on the landingpage css file

--- a/styles/contentPages.css
+++ b/styles/contentPages.css
@@ -86,7 +86,7 @@ header {
     margin-left: 48px;
 }
 
-.subtitle {
+/* .subtitle {
     margin-top: 48px;
     margin-right: 46px;
     font-family: var(--main-title-font, sans-serif);
@@ -104,11 +104,47 @@ header {
 .subtitle img {
     height: 25px;
     width: 25px;
-    /* margins in rem because subtitle font is in rem */
     margin-top: .875rem;
     margin-left: 14px;
     margin-right: -3rem;
+} */
+
+.subtitle {
+    grid-area: subtitle;
+    justify-self: right;
+    align-self: start;
+    margin-top: 48px;
+    margin-right: 48px;
+    font-family: var(--main-title-font, sans-serif);
+    font-size: 1.125rem;
+    font-weight: 300;
 }
+
+.subtitleLinks {
+    grid-area: subtitle;
+    justify-self: end;
+    align-self: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-top: 1rem;
+    margin-right: 48px;
+}
+
+.subtitleLinks img {
+    height: 25px;
+    width: 25px;
+    margin-top: 16px;
+    margin-left: 16px;
+}
+
+.subtitleLinks a {
+    margin: 0;
+}
+
+
+
+
 
 .topBorder {
     width: 100%;
